# tmst

./: .gitignore  .travis.yml  Cargo.toml  README.md  i3blocks.conf.example
.travis/: Dockerfile
migrations/2019-07-12-135752_initdb/: down.sql  up.sql
scripts/: tmst-gui.sh  tmst-i3block.sh
src/: cmds.rs  main.rs  models.rs  options.rs  schema.rs  utils.rs
